--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ape-tasking",
-  "version": "1.0.3",
-  "description": "Tasking module of ape framework.",
+  "version": "1.0.4",
+  "description": "ape framework module for managins tasks",
   "main": "lib",
   "scripts": {
     "build": "./ci/build.js",
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/ape-repo/ape-tasking#readme",
   "dependencies": {
-    "ape-releasing": "^1.0.9",
     "argx": "^1.1.5",
     "async": "^1.4.0",
     "colorprint": "^1.1.1",
@@ -35,11 +34,11 @@
     "stringcase": "^1.0.8"
   },
   "devDependencies": {
-    "ape-covering": "^1.0.1",
-    "ape-releasing": "^1.0.3",
-    "ape-reporting": "^1.0.0",
-    "ape-testing": "^1.1.0",
-    "coz": "^1.3.1",
+    "ape-covering": "^1.0.5",
+    "ape-releasing": "^1.0.12",
+    "ape-reporting": "^1.0.3",
+    "ape-testing": "^1.1.4",
+    "coz": "^1.4.2",
     "injectmock": "^1.0.4"
   }
 }
