--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ape-tasking",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "ape framework module for managins tasks",
   "main": "lib",
   "scripts": {
@@ -38,7 +38,8 @@
     "ape-releasing": "^1.0.12",
     "ape-reporting": "^1.0.3",
     "ape-testing": "^1.1.4",
-    "coz": "^1.4.2",
+    "ape-tmpl": "^1.0.1",
+    "coz": "^1.5.0",
     "injectmock": "^1.0.4"
   }
 }
