--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ape-tasking",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "ape framework module for managins tasks",
   "main": "lib",
   "scripts": {
@@ -27,20 +27,21 @@
   },
   "homepage": "https://github.com/ape-repo/ape-tasking#readme",
   "dependencies": {
-    "argx": "^1.1.5",
-    "async": "^1.4.1",
-    "colorprint": "^1.1.1",
+    "argx": "^1.1.6",
+    "async": "^1.4.2",
+    "colorprint": "^1.1.2",
     "glob": "^5.0.14",
-    "stringcase": "^1.0.8"
+    "stringcase": "^1.2.5"
   },
   "devDependencies": {
     "ape-covering": "^1.0.8",
     "ape-releasing": "^1.0.14",
-    "ape-reporting": "^1.0.7",
-    "ape-testing": "^1.1.6",
-    "ape-tmpl": "^1.0.1",
+    "ape-reporting": "^1.0.8",
+    "ape-testing": "^1.3.2",
+    "ape-tmpl": "^1.0.9",
     "ape-updating": "^1.0.1",
-    "coz": "^1.5.0",
-    "injectmock": "^1.0.4"
+    "coz": "^3.0.13",
+    "coz-tmpl": "^1.0.4",
+    "injectmock": "^1.1.3"
   }
 }
