--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "ape-tasking",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "ape framework module for managins tasks",
   "main": "lib",
   "scripts": {
-    "build": "./ci/build.js",
-    "test": "./ci/test.js",
-    "cover": "./ci/cover.js",
-    "report": "./ci/report.js"
+    "test": "./ci/test.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ape-repo/ape-tasking.git"
-  },
+  "repository": "ape-repo/ape-tasking",
   "keywords": [
     "ape",
     "tasking"
@@ -28,20 +22,22 @@
   "homepage": "https://github.com/ape-repo/ape-tasking#readme",
   "dependencies": {
     "argx": "^1.3.1",
-    "async": "^1.4.2",
-    "colorprint": "^2.0.4",
-    "glob": "^5.0.15",
-    "stringcase": "^1.2.5"
+    "async": "^1.5.0",
+    "colorprint": "^2.1.0",
+    "glob": "^6.0.1",
+    "stringcase": "^1.2.8"
   },
   "devDependencies": {
-    "ape-covering": "^1.0.8",
-    "ape-releasing": "^1.0.16",
-    "ape-reporting": "^1.0.9",
-    "ape-testing": "^1.3.2",
-    "ape-tmpl": "^1.3.13",
-    "ape-updating": "^1.1.0",
-    "coz": "^3.1.5",
-    "coz-tmpl": "^1.1.0",
+    "ape-covering": "^1.1.1",
+    "ape-releasing": "^1.1.2",
+    "ape-reporting": "^2.0.2",
+    "ape-testing": "^1.5.0",
+    "ape-tmpl": "^2.0.4",
+    "ape-updating": "^1.1.2",
+    "coz": "^3.1.6",
     "injectmock": "^1.1.3"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   }
 }
