--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '4.0'
 before_install: 
-- npm install istanbul mocha nodeunit -g
+- npm install istanbul mocha -g
 install:
 - npm install
 before_script:
