--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
   "dependencies": {
     "argx": "^1.3.1",
     "async": "^1.5.0",
-    "colorprint": "^2.1.0",
-    "glob": "^6.0.1",
-    "stringcase": "^1.2.8"
+    "colorprint": "^3.0.0",
+    "execcli": "^3.0.1",
+    "glob": "^6.0.3",
+    "stringcase": "^2.0.0"
   },
   "devDependencies": {
-    "ape-covering": "^1.1.1",
-    "ape-releasing": "^1.1.2",
-    "ape-reporting": "^2.0.2",
-    "ape-testing": "^1.5.0",
-    "ape-tmpl": "^2.0.4",
-    "ape-updating": "^1.1.2",
+    "ape-covering": "^2.0.2",
+    "ape-releasing": "^2.0.0",
+    "ape-reporting": "^2.0.3",
+    "ape-testing": "^2.0.0",
+    "ape-tmpl": "^2.0.5",
+    "ape-updating": "^2.0.1",
     "coz": "^3.1.6",
     "injectmock": "^1.1.3"
   },
