--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ape-tasking",
-  "version": "2.0.1",
-  "description": "ape framework module for managins tasks",
+  "version": "2.0.2",
+  "description": "ape framework module for tasks",
   "main": "lib",
   "scripts": {
     "test": "./ci/test.js"
