--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ape-tasking",
-  "version": "3.1.4",
+  "version": "4.0.0",
   "description": "ape framework module for tasks",
   "main": "lib",
   "scripts": {
@@ -38,6 +38,7 @@
     "injectmock": "^2.0.0"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=6",
+    "npm": ">=3"
   }
 }
