--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-- '6'
-before_install: 
-- npm install istanbul mocha -g
+- '8'
+before_install:
+- npm install mocha -g
 install:
 - npm install
 before_script:
@@ -10,5 +10,3 @@ before_script:
 script:
 - ./ci/build.js
 - ./ci/test.js
-- ./ci/cover.js
-- ./ci/report.js
